// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.aggregate.protos.frontend.api.v1;

import "google/protobuf/timestamp.proto";
import "protos/frontend/api/v1/job_status.proto";
import "protos/frontend/api/v1/result_info.proto";

option java_outer_classname = "GetJobResponseProto";
option java_package = "com.google.aggregate.protos.frontend.api.v1";

/** The response returned from the GetJob API call. */
message GetJobResponse {
  /** Enum value representing the current status of the job. */
  JobStatus job_status = 1;
  /** The time the request was received. */
  google.protobuf.Timestamp request_received_at = 2;
  /** The time the request was updated. */
  google.protobuf.Timestamp request_updated_at = 3;
  /** Unique identifier provided by the ad-tech. */
  string job_request_id = 4;
  /** Name of the input data file. */
  string input_data_blob_prefix = 5;
  /** Bucket name for the input data file. */
  string input_data_bucket_name = 6;
  /** Name of the output data file. */
  string output_data_blob_prefix = 7;
  /** Bucket name for the output data file. */
  string output_data_bucket_name = 8;
  /** URL to notify the result. */
  string postback_url = 9;
  /** Data generated by the worker during processing. */
  ResultInfo result_info = 10;
  /** Data plane application specific parameters. */
  map<string, string> job_parameters = 11;
  /** The time the worker starts to process the request. */
  google.protobuf.Timestamp request_processing_started_at = 12;
  /** List of URLs to the input prefix data files. */
  repeated string input_data_blob_prefixes = 13;
}
